opam-version: "2.0"
maintainer: "geoffderosenroll@gmail.com"
authors: ["Geoff deRosenroll <geoffderosenroll@gmail.com>"]
homepage: "https://github.com/geoffder/ocaml-playground"
bug-reports: "https://github.com/geoffder/ocaml-playground/issues"
dev-repo: "git+https://github.com/geoffder/ocaml-playground.git"
doc: "https://github.com/geoffder/ocaml-playground/readme.md"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [

]
synopsis: "Simple stateful agent abstraction over Jane Street Async"
description: "
"
